php artisan make:model bankcheques -c -m
cheques

Table contents
ID
Serial
transaction_id
open_amount
transaction_type
user_id
created_at
Updated_at


//generate migrations
composer require --dev "xethron/migrations-generator"

php artisan migrate:generate transactionsClone

On the project root in your terminal, execute this artisan command

php artisan migrate:generate

This will convert all your tables into migration files. If you are looking to generate files for specific tables, you can use this command

php artisan migrate:generate table1,table2,table3,table4,table5

You can also choose to ignore few tables and generate all others by using the following command

php artisan migrate:generate --ignore="table3,table4,table5"

That’s it ! The Migrations files will be created in your project in directory database > migrations




php artisan make:model bankcheques_payment --migration

php artisan make:model bankchequeAccounts --migration

php artisan make:model category_view --migration


php artisan migrate:refresh --path=/database/migrations/2021_11_15_214145_create_bankcheques_table.php

php artisan migrate:refresh --path=/database/migrations/2022_01_24_231018_create_category_views_table.php

php artisan migrate:refresh --path=/database/migrations/2019_10_18_155633_create_account_types_table.php


php artisan migrate:refresh --path=/database/migrations/2021_11_23_223407_create_bankchequespayments_table.php
php artisan migrate:refresh --path=/database/migrations/2021_12_03_201824_create_bankcheque_accounts_table.php

php artisan migrate:refresh --path=/database/migrations/2021_12_28_215221_create_bankcheques_payments_table.php

php artisan migrate:refresh --path=/database/migrations/2017_11_21_064540_create_barcodes_table.php
php artisan migrate:refresh --path=/database/migrations/2018_03_06_210206_modify_product_barcode_types.php
php artisan migrate:refresh --path=/database/migrations/2018_03_06_210206_modify_product_barcode_types.php
