@@ -1,0 +1,10 @@
+<?php
+
+namespace App;
+
+use Illuminate\Database\Eloquent\Model;
+
+class transaction_sell_linesClone extends Model
+{
+    //
+}
