@@ -1,5 +1,6 @@
 <?php 
  return [ 
+"cheque" => "شيك",
 "filter" => "بحــث",
 "all" => "جميع الشيكات",
 "status" => " حالة الشيك",
